# LambdaJam-Parsing-exercises

./: LICENSE  LambdaJam-Parsing-exercises.cabal  README.md  stack.yaml
lib/Parsers/: CPS.hs  CPSCommit.hs  Commit.hs  Simple.hs
lib/Regex/: CPSCommitParser.hs  CPSParser.hs  CommitParser.hs  SimpleParser.hs  Types.hs
src/: regex-comparison.hs  regex-tester.hs
